Sync all content

--- a/content/resources/16-333f04-th.md
+++ b/content/resources/16-333f04-th.md
@@ -13,4 +13,8 @@ ocw_type: OCWImage
 resourcetype: Image
 title: 16-333f04-th.jpg
 uid: dec8a364-8859-f15f-1f45-00a33afd12ba
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
