--- a/content/resources/16-333f04.md
+++ b/content/resources/16-333f04.md
@@ -14,4 +14,8 @@ ocw_type: OCWImage
 resourcetype: Image
 title: 16-333f04.jpg
 uid: 135e2d2d-1628-0342-2022-ba25154c7b52
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
