--- a/content/resources/16-333f04-th.md
+++ b/content/resources/16-333f04-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/16-333-aircraft-stability-and-control-fall-2004/dec8a3648859f15f1f4500a33afd12ba_16-333f04-th.jpg
+file: /media/courses/16-333-aircraft-stability-and-control-fall-2004/dec8a3648859f15f1f4500a33afd12ba_16-333f04-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A B-1 Lancer bomber performs a fly-by during a firepower demonstration
@@ -9,6 +9,7 @@ image_metadata:
   credit: ''
   image-alt: A B-1 Lancer bomber performs a fly-by.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 16-333f04-th.jpg
@@ -18,3 +19,4 @@ video_files:
 video_metadata:
   youtube_id: null
 ---
+New image Upload
