--- a/content/resources/16-333f04.md
+++ b/content/resources/16-333f04.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: A B-1 Lancer bomber performs a fly-by during a firepower demonstration
   in Nevada, U.S.A. (U.S. Air Force photo by Master Sgt. Robert W. Valenca.)
-file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/16-333-aircraft-stability-and-control-fall-2004/135e2d2d162803422022ba25154c7b52_16-333f04.jpg
+file: /media/courses/16-333-aircraft-stability-and-control-fall-2004/135e2d2d162803422022ba25154c7b52_16-333f04.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A B-1 Lancer bomber performs a fly-by during a firepower demonstration
@@ -10,6 +10,7 @@ image_metadata:
   credit: ''
   image-alt: A B-1 Lancer bomber performs a fly-by.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 16-333f04.jpg
@@ -19,3 +20,4 @@ video_files:
 video_metadata:
   youtube_id: null
 ---
+A B-1 Lancer bomber performs a fly-by during a firepower demonstration in Nevada, U.S.A. (U.S. Air Force photo by Master Sgt. Robert W. Valenca.)
